Fix triangle indicator v-align #1141

--- a/src/assets/css/table.css
+++ b/src/assets/css/table.css
@@ -61,10 +61,6 @@
     height: 42px;
 }
 
-.table th {
-    padding-right: .05rem;
-}
-
 .table td {
     cursor: pointer;
     border-top: 0;
